--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
         "@testing-library/user-event": "^13.5.0",
         "@vechaiui/core": "^0.6.0",
         "@vechaiui/react": "^0.2.2",
+        "base-64": "^1.0.0",
         "bootstrap": "^5.1.3",
+        "jwt-decode": "^3.1.2",
         "node-sass": "^7.0.1",
         "react": "^18.1.0",
         "react-bootstrap": "^2.4.0",
+        "react-cookies": "^0.1.1",
         "react-dom": "^18.1.0",
         "react-if": "^4.1.4",
         "react-paginate": "^8.1.3",
@@ -24,6 +27,7 @@
         "react-scripts": "5.0.1",
         "sass": "^1.51.0",
         "scss": "^0.2.4",
+        "superagent": "^7.1.3",
         "uuid": "^8.3.2",
         "web-vitals": "^2.1.4"
     },
